# borgmatic

./: .bandit  .drone.yml  .eleventy.js  .flake8  .gitignore  .gitlab-ci.yml  .hgignore  .hgtags  AGENTS.md  AUTHORS  MANIFEST.in  NEWS  README  README.md  SECURITY.md  binary_requirements.in  binary_requirements.txt  pyinstaller-main.py  pyproject.toml  setup.cfg  setup.py  test_requirements.in  test_requirements.txt  tox.ini
.forgejo/: pull_request_template.md
.forgejo/issue_template/: feature_template.yaml
.forgejo/workflows/: build.yaml
.gitea/: ISSUE_TEMPLATE.md  issue_template.md
.gitea/issue_template/: bug_template.md  bug_template.yaml  feature_template.md  feature_template.yaml
.gitea/workflows/: build.yaml  docs.yaml  test.yaml
.github/: mistaken-pull-closer.yml  pull_request_template.md
atticmatic/: attic.py  command.py  config.py  verbosity.py
atticmatic/backends/: attic.py  borg.py  shared.py
atticmatic/tests/: builtins.py
atticmatic/tests/integration/: test_command.py  test_config.py  test_version.py
atticmatic/tests/unit/: test_attic.py  test_command.py  test_config.py
borgmatic/: borg.py  command.py  config.py  execute.py  hook.py  logger.py  signals.py  verbosity.py
borgmatic/actions/: arguments.py  bootstrap.py  borg.py  break_lock.py  browse.py  change_passphrase.py  check.py  compact.py  create.py  delete.py  diff.py  dump.py  export_key.py  export_tar.py  extract.py  import_key.py  info.py  json.py  list.py  mount.py  pattern.py  prune.py  rcreate.py  rdelete.py  recreate.py  repo_create.py  repo_delete.py  repo_info.py  repo_list.py  restore.py  rinfo.py  rlist.py  transfer.py
borgmatic/actions/browse/: app.py  archive.py  archives_list.py  bindings.py  carousel.py  configuration_files_list.py  controller.py  directory_list.py  file_preview.py  icons.py  loading.py  logs.py  panels.py  paths.py  repositories_list.py  run.py  view.py  widgets.py  workers.py
borgmatic/actions/config/: bootstrap.py  generate.py  show.py  validate.py
borgmatic/borg/: borg.py  break_lock.py  change_passphrase.py  check.py  compact.py  create.py  delete.py  diff.py  environment.py  execute.py  export_key.py  export_tar.py  extract.py  feature.py  flags.py  import_key.py  info.py  init.py  list.py  mount.py  passcommand.py  pattern.py  prune.py  rcreate.py  rdelete.py  recreate.py  rename.py  repo_create.py  repo_delete.py  repo_info.py  repo_list.py  rinfo.py  rlist.py  state.py  transfer.py  umount.py  version.py
borgmatic/commands/: arguments.py  borgmatic.py  completion.py  convert_config.py  generate_config.py  hook.py  validate_config.py
borgmatic/commands/completion/: actions.py  bash.py  fish.py  flag.py
borgmatic/config/: arguments.py  checks.py  collect.py  constants.py  convert.py  credential.py  environment.py  generate.py  legacy.py  load.py  normalize.py  options.py  override.py  paths.py  schema.py  schema.yaml  validate.py  yaml.py
borgmatic/hooks/: apprise.py  bootstrap.py  command.py  cronhub.py  cronitor.py  database.py  dispatch.py  dump.py  healthchecks.py  logs.py  loki.py  mariadb.py  mongodb.py  monitor.py  mysql.py  ntfy.py  pagerduty.py  postgresql.py  prepare.py  pushover.py  snapper.py  sqlite.py  uptimekuma.py  zabbix.py  zfs.py
borgmatic/hooks/credential/: container.py  file.py  keepassxc.py  parse.py  passcommand.py  systemd.py  tag.py
borgmatic/hooks/data_source/: bootstrap.py  btrfs.py  config.py  dump.py  influxdb.py  lvm.py  mariadb.py  mongodb.py  mysql.py  postgresql.py  snapshot.py  sqlite.py  utils.py  zfs.py
borgmatic/hooks/monitoring/: apprise.py  cronhub.py  cronitor.py  healthchecks.py  logs.py  loki.py  monitor.py  ntfy.py  pagerduty.py  pushover.py  sentry.py  uptime_kuma.py  zabbix.py
borgmatic/metrics/: __init__.py  base.py  prometheus.py
borgmatic/tests/: builtins.py
borgmatic/tests/integration/: test_command.py  test_config.py
borgmatic/tests/unit/: test_borg.py  test_config.py  test_verbosity.py
docs/: Dockerfile  SECURITY.md  docker-compose.yaml  fetch-contributors  search.md
docs/_data/: borgmatic.js  layout.json
docs/_includes/: asciinema.css  header.njk  index.css  index.css.njk  prism-theme.css
docs/_includes/components/: external-links.css  info-blocks.css  lists.css  minilink.css  suggestion-form.css  suggestion-form.html  suggestion-link.html  toc.css
docs/_includes/layouts/: base.njk  main.njk
docs/how-to/: add-preparation-and-cleanup-steps-to-backups.md  backup-to-a-removable-drive-or-an-intermittent-server.md  backup-your-databases.md  customize-warnings-and-errors.md  deal-with-very-large-backups.md  develop-on-borgmatic.md  extract-a-backup.md  index.md  inspect-your-backups.md  install-borgmatic.md  make-backups-redundant.md  make-per-application-backups.md  monitor-your-backups.md  provide-your-passwords.md  restore-a-backup.md  run-arbitrary-borg-commands.md  run-preparation-steps-before-backups.md  set-up-backups.md  snapshot-your-filesystems.md  upgrade.md
docs/reference/: command-line.md  configuration.md  index.md  source-code.md
sample/: atticmatic.cron  borgmatic.cron  config  config.yaml  excludes
sample/cron/: borgmatic
sample/cron-alpine/: borgmatic
sample/systemd/: borgmatic-user.service  borgmatic-user.timer  borgmatic.service  borgmatic.timer
scripts/: black  dev-docs  export-docs-from-image  find-unsupported-borg-options  isort  pip  push  release  run-end-to-end-dev-tests  run-end-to-end-tests  run-full-dev-tests  run-full-tests  run-tests  upgrade-dependencies
scripts/docs/: build  push
tests/end-to-end/: Dockerfile  docker-compose.yaml  test_borgmatic.py  test_btrfs.py  test_completion.py  test_config_flag.py  test_database.py  test_dev_parity_with_build_server.py  test_environment_variable.py  test_generate_config.py  test_invalid_flag.py  test_lvm.py  test_override.py  test_passcommand.py  test_snapper.py  test_validate_config.py  test_zfs.py
tests/integration/: test_execute.py  test_logger.py
tests/unit/: test_execute.py  test_hook.py  test_logger.py  test_signals.py  test_verbosity.py
tests/unit/borg/: test_borg.py  (+35 more)
(+279 files in other folders)
