[project]
name = "borgmatic"
version = "2.0.7"
authors = [
  { name="Dan Helfman", email="witten@torsion.org" },
]
description = "Simple, configuration-driven backup software for servers and workstations"
readme = "README.md"
requires-python = ">=3.9"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Archiving :: Backup",
]
dependencies = [
    "jsonschema",
    "packaging",
    "requests",
    "ruamel.yaml>0.15.0",
]

[project.scripts]
borgmatic = "borgmatic.commands.borgmatic:main"
generate-borgmatic-config = "borgmatic.commands.generate_config:main"
validate-borgmatic-config = "borgmatic.commands.validate_config:main"

[project.optional-dependencies]
Apprise = ["apprise"]

[project.urls]
Homepage = "https://torsion.org/borgmatic"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["borgmatic*"]
namespaces = false

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--cov-report term-missing:skip-covered --cov=borgmatic --no-cov-on-fail --cov-fail-under=100 --ignore=tests/end-to-end"

[tool.isort]
profile = "black"
known_first_party = "borgmatic"
line_length = 100
skip = ".tox"

[tool.codespell]
skip = ".git,.tox,build"
