[metadata]
description-file=README.md

[tool:pytest]
testpaths = tests
addopts = --cov-report term-missing:skip-covered --cov=borgmatic --ignore=tests/end-to-end
filterwarnings = 
    ignore:Coverage disabled.*:pytest.PytestWarning

[flake8]
ignore = E501,W503
exclude = *.*/*

[tool:isort]
force_single_line = False
include_trailing_comma = True
known_first_party = borgmatic
line_length = 100
multi_line_output = 3
skip = .tox
