[metadata]
description_file=README.md

[tool:pytest]
testpaths = tests
addopts = --cov-report term-missing:skip-covered --cov=borgmatic --ignore=tests/end-to-end

[flake8]
max-line-length = 100
extend-ignore = E203,E501,W503
exclude = *.*/*
multiline-quotes = '''
docstring-quotes = '''

[tool:isort]
profile=black
known_first_party = borgmatic
line_length = 100
skip = .tox

[codespell]
skip = .git,.tox,build

[pycodestyle]
ignore = E203
max_line_length = 100
